--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -140,7 +140,7 @@
 						<span class="price">${{abc.price|floatformat:2}}</span>
 					</div> <!-- price-wrap.// -->
 				</div>
-				<a href="#" class="btn btn-block btn-success">Added to cart </a>
+				<a href="{{abc.get_url}}" class="btn btn-block btn-success">View Details</a>
 			</figcaption>
 		</figure>
 	</div> <!-- col.// -->
@@ -150,13 +150,29 @@
 
 
 <nav class="mt-4" aria-label="Page navigation sample">
+	{% if b.has_other_pages %}
   <ul class="pagination">
-    <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
-    <li class="page-item active"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item"><a class="page-link" href="#">Next</a></li>
+	{% if b.has_previous %}
+    <li class="page-item"><a class="page-link" href="?page={{b.previous_page_number}}">Previous</a></li>
+	{% else %}
+	<li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
+	{% endif %}
+	
+	{% for abc in b.paginator.page_range %}
+	{% if b.number == abc %}	<!--current page-->
+	<li class="page-item active"><a class="page-link" href="#">{{abc}}</a></li>
+	{% else %}
+	<!--if not current page-->
+	<li class="page-item"><a class="page-link" href="?page={{abc}}">{{abc}}</a></li>
+	{% endif %}
+	{% endfor %}
+	{% if b.has_next %}
+	<li class="page-item"><a class="page-link" href="?page={{b.next_page_number}}">Next</a></li>
+	{% else %}
+	<li class="page-item disabled"><a class="page-link" href="#">Next</a></li>
+	{% endif %}
   </ul>
+  {% endif %}
 </nav>
 
 	</main> <!-- col.// -->
